changes commited for category image upload
